--- a/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/ClientApp/app/components/navmenu/navmenu.component.html
@@ -7,24 +7,15 @@
                 <span class='icon-bar'></span>
                 <span class='icon-bar'></span>
             </button>
-            <a class='navbar-brand' WebApplicationBasic></a>
+            <a class='navbar-brand'></a>
         </div>
         <div class='clearfix'></div>
         <div class='navbar-collapse collapse'>
             <ul class='nav navbar-nav'>
-                <li >
-                    <a>
-                        <span class='glyphicon glyphicon-home'></span> Home
-                    </a>
-                </li>
+              
                 <li>
-                    <a>
-                        <span class='glyphicon glyphicon-education'></span> Counter
-                    </a>
-                </li>
-                <li>
-                    <a>
-                        <span class='glyphicon glyphicon-th-list'></span> Fetch data
+                    <a [routerLink]="['/vehicles/new']">
+                        <span class='glyphicon glyphicon-plus'></span> New Vehicle
                     </a>
                 </li>
             </ul>
