--- a/ClientApp/app/components/vehicle-form/vihicle-form.component.html
+++ b/ClientApp/app/components/vehicle-form/vihicle-form.component.html
@@ -1,3 +1,10 @@
-<p>
-  vihicle-form works!
-</p>
+<h1>New Vehicle</h1>
+<form >
+    <div class="form-group">
+        <label for="Make">Make</label>
+        <select class="form-control" id="Make"></select></div>
+
+        <div class="form-group">
+            <label for="Model">Model</label>
+            <select  id="Model" class="form-control"></select></div>
+</form>
