--- a/ClientApp/app/components/vehicle-form/vihicle-form.component.html
+++ b/ClientApp/app/components/vehicle-form/vihicle-form.component.html
@@ -2,9 +2,16 @@
 <form >
     <div class="form-group">
         <label for="Make">Make</label>
-        <select class="form-control" id="Make"></select></div>
+        <select class="form-control" id="Make" (change)="onMakeChange()" ng-model="vehicle.make" name="make">
+            <option value=""></option>
+            <option *ngFor="let m of makes" value="{{m.id}}">{{m.name}}</option>
+            </select></div>
 
         <div class="form-group">
             <label for="Model">Model</label>
-            <select  id="Model" class="form-control"></select></div>
+            <select  id="Model" class="form-control">
+              <option value=""></option>
+                <option *ngFor="let mod of models" value="{{mod.id}}">{{mod.name}}</option>
+                
+                </select></div>
 </form>
